Completed initial CSS stylesheet. Need to modify and fix text wrapping for the quote section

--- a/style-sheet/style.css
+++ b/style-sheet/style.css
@@ -45,9 +45,9 @@ body{
 .opening{
     justify-content: space-evenly;
     align-items: center;
-    padding-bottom : 12px;
+    padding-bottom : 50px;
     height : 350px;
-    gap : 0px;
+    gap : 12px;
 }
 .hero-text{
     width : 500px;
@@ -56,12 +56,12 @@ body{
     font-size : 48px;
     font-weight: extra-bold;
     color : #F9FAF8;
-    margin-bottom : 5px;
+    margin-bottom : 10px;
 }
 .hero-text div {
     font-size : 18px;
     color : #E5E7EB;
-    margin-bottom : 5px;
+    margin-bottom : 10px;
 }
 button, button:active { 
     background-color: #3882F6;
@@ -69,9 +69,11 @@ button, button:active {
     padding : 8px;
     color : #F9FAF8;
     border : 3px solid black;
+    font-size:18px;
 }
 button:active{
     border : 3px solid red;
+    background-color: #1F2937;
 }
 
 .img.one img{
@@ -96,8 +98,10 @@ Midsection
     display:flex;
     flex-direction: column;
     justify-content: center;
-    gap : 15px;
+    gap : 30px;
     padding-top : 20px;
+    margin-top:80px;
+    margin-bottom:80px;
 }
 .midsection{
     display:flex;
@@ -131,3 +135,89 @@ Quote Section
 
 */
 
+.quote{
+    display:flex;
+    flex-direction: column;
+    padding : 20px 100px;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+    height : 350px;
+    
+}
+
+.quote .the-quote{
+    font-size: 36px;
+    font-style:italic;
+    color: #26313f;
+}
+.the-quote #quotee{
+    font-size : 24px;
+    font-weight: bold;
+    text-align: end;
+}
+.my-quote{
+    font-size : 36px;
+    font-style:light italic;
+    color : #1F2937;
+}
+
+
+/*
+    Call to action
+*/
+
+.action{
+    height : 300px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#button{
+    border : 2px solid #E5E7EB;
+    padding: 5px 15px;
+    width : 100px;
+    font-size:18px;
+}
+#button:active{
+    border : 2px solid red;
+    background-color: #1F2937;
+    padding: 5px 15px;
+}
+.border{
+    width : 60em;
+    height : 5em;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    padding : 30px;
+    background-color: #3882F6;
+    border-radius: 6px;
+}
+.call div{
+    color:#E5E7EB;
+    font-size:18px;
+}
+.call .text{
+    font-weight:bold;
+}
+
+
+
+/*
+
+    Footer
+
+*/
+
+.footer{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height : 100px;
+    background-color: #1F2937;
+    font-size:18px;
+    color:#E5E7EB;
+}
